# retail-price-forecasting-and-optimisation

./: .gitignore  README.md  environment-2020.txt  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
notebooks/: Business_Data_Analytics_UPDATED_1.ipynb
report/: Retail prediction.docx
src/: run_forecast.py  run_optimisation.py
