[project]
name = "retail-price-forecasting"
version = "1.0.0"
description = "Retail Price Forecasting & Optimisation"
authors = [
  { name="Tejas Ravindra Bornare", email="your-email@example.com" }
]
license = "MIT"
readme = "README.md"

dependencies = [
  "pandas==2.2.2",
  "numpy==1.26.4",
  "scikit-learn==1.3.2",
  "prophet==1.1.5",
  "statsmodels==0.14.1",
  "pulp==2.8.0",
  "matplotlib==3.8.4"
]

[tool.setuptools.packages.find]
where = ["src"]
